--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^19.1.9",
     "eslint": "^9.35.0",
     "eslint-config-next": "15.5.2",
+    "sass": "^1.92.1",
     "shadcn": "^3.2.1",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
