--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "type:check": "pnpm exec tsc --noEmit"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.1",
