Update project name and branding to 'Landing Page Patterns with Next.js'
- Updated package.json name from 'landing-nextjs' to 'landing-page-patterns-nextjs'
- Rewrote README.md with comprehensive project description and architectural patterns overview
- Updated page metadata in layout.tsx with new title and description
- Improved documentation structure and project purpose explanation

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landing-nextjs",
+  "name": "landing-page-patterns-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
